# pdfeditor

./: .gitignore  Cargo.toml  MVP版本技术方案文档.md  PDF编辑器桌面应用需求文档.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build.yml
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.vue  env.d.ts  main.ts  pdfEditor.ts  skiaRenderer.ts  styles.css  viewport.ts
apps/web/src/components/: RunsEditor.vue
apps/web/src/composables/: usePdfDocument.ts  usePdfEditor.ts
crates/pdfeditor-cli/: Cargo.toml
crates/pdfeditor-cli/src/: main.rs
crates/pdfeditor-cli/tests/: replace.rs
crates/pdfeditor-core/: Cargo.toml
crates/pdfeditor-core/examples/: diagnose_cmap.rs  diagnose_json.rs  diagnose_partnership.rs  diagnose_tounicode.rs
crates/pdfeditor-core/src/: cache.rs  document.rs  edit.rs  engine.rs  error.rs  font_embed.rs  lib.rs  lopdf_backend.rs  page_writer.rs  resource.rs  types.rs  wasm_api.rs
crates/pdfeditor-core/tests/: core_mvp.rs
docs/: CLI使用说明.md  WebAssembly编译说明.md  后端wasm使用说明.md  核心层MVP实现说明.md  项目结构与Web前端说明.md
