[package]
name = "pdfeditor-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "pdfeditor_core"
path = "src/lib.rs"

[dependencies]
lopdf = "0.34"
serde = { version = "1", features = ["derive"] }
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
flate2 = "1"
